--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
-<body class="lg:p-[50px] " style="background-image: url(image/bg.png); font-family: 'Poppins', sans-serif;">
+<body class="lg:p-[50px] h-screen w-screen" style="background-image: url(image/bg.png); font-family: 'Poppins', sans-serif;">
 
     <div class="navbar ">
         <div class="flex-1">
