--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
 
 
-            <div class="stats shadow ml-[25px] md:ml-[35px] lg:ml-[50px] hidden lg:flex">
+            <div class="stats shadow ml-[25px] md:ml-[15px] lg:ml-[50px] hidden md:flex lg:flex">
   
                 <div class="stat">
                   <div class="stat-figure text-secondary">
