--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
-            <li><a href="#">Downloads</a></li>
+            <li><a href="https://play.google.com/store/apps/details?id=com.JannatiSobdo.nur_e_quran">Downloads</a></li>
         
         </ul>
         </div>
